layout display problem in admin/admins (and delete method bug) fixed

--- a/app/views/layouts/backend.html.erb
+++ b/app/views/layouts/backend.html.erb
@@ -3,12 +3,13 @@
 <head>
   <title>Charta</title>
   <%= stylesheet_link_tag "application", :media => "all" %>
+  <%= stylesheet_link_tag "backend/application", :media => "all" %>
+  <%= stylesheet_link_tag "backend/scaffolds", :media => "all" %>
   <%= javascript_include_tag "application" %>
+  <%= javascript_include_tag "backend/application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+	<%= yield %>
 </body>
 </html>
