--- a/app/views/backend/admins/new.html.erb
+++ b/app/views/backend/admins/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New admin</h1>
+<div id="header">
+	<h1>New admin</h1>
+</div>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', admin_admins_path %>
+<div id="actions">
+	<%= link_to 'Admins list', admin_admins_path %>
+</div>
