--- a/app/assets/stylesheets/backend/admins.css.scss
+++ b/app/assets/stylesheets/backend/admins.css.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the admins controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.presentation div.element_field.bio
+{
+	height: 176px;
+}
+.presentation div.element_field div.content.bio
+{
+	height: 164px;
+}
+
+.presentation div.element_field textarea.content.bio
+{
+	height: 164px;
+	resize: none;
+}
