--- a/app/views/backend/admins/show.html.erb
+++ b/app/views/backend/admins/show.html.erb
@@ -16,16 +16,16 @@
 		<div class="element_field">
 		  <div class="name">Email</div><div class="content"><%= @admin.email %></div>
 		</div>
+	</div>
+	<div class="right">
 		<div class="element_field">
 		  <div class="name">Name</div><div class="content"><%= @admin.name %></div>
 		</div>
 		<div class="element_field">
 		  <div class="name">Surname</div><div class="content"><%= @admin.surname %></div>
 		</div>
-	</div>
-	<div class="right">
-		<div class="element_field bio" style="height: 176px;">
-		  <div class="name">Bio</div><div class="content bio"><%= @admin.bio %></div>
+		<div class="element_field bio">
+		  <div class="name">Bio</div><div class="content"><%= @admin.bio %></div>
 		</div>
 	</div>
 	<div class="center">
