company scaffold styles modified

--- a/app/views/backend/admins/_form.html.erb
+++ b/app/views/backend/admins/_form.html.erb
@@ -29,7 +29,7 @@
 		<div class="element_field">
 			<%= f.label :surname, :class => "name" %><%= f.text_field :surname, :class => "content" %>
 		</div>
-		<div class="element_field bio">
+		<div class="element_field admin_bio">
 			<%= f.label :bio, :class => "name" %><%= f.text_area :bio, :class => "content" %>
 		</div>
 	</div>
