--- a/app/views/backend/admins/show.html.erb
+++ b/app/views/backend/admins/show.html.erb
@@ -24,7 +24,7 @@
 		<div class="element_field">
 		  <div class="name">Surname</div><div class="content"><%= @admin.surname %></div>
 		</div>
-		<div class="element_field bio">
+		<div class="element_field admin_bio">
 		  <div class="name">Bio</div><div class="content"><%= @admin.bio %></div>
 		</div>
 	</div>
