--- a/app/assets/stylesheets/backend/admins.css.scss
+++ b/app/assets/stylesheets/backend/admins.css.scss
@@ -2,12 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.presentation div.element_field.bio
+.presentation div.element_field.admin_bio
 {
 	height: 73px;
 }
 
-.presentation div.element_field.bio .content
+.presentation div.element_field.admin_bio .content
 {
 	height: 51px;
 	resize: none;
