--- a/app/assets/stylesheets/backend/company.css.scss
+++ b/app/assets/stylesheets/backend/company.css.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the companies controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.presentation div.element_field.company_description,
+.presentation div.element_field.company_services
+{
+	height: 88px;
+}
+
+.presentation div.element_field.company_description .content,
+.presentation div.element_field.company_services .content
+{
+	height: 66px;
+	resize: none;
+	overflow: auto;
+}
