application styles separated into backend and frontend

--- a/app/views/layouts/backend.html.erb
+++ b/app/views/layouts/backend.html.erb
@@ -3,14 +3,11 @@
 <head>
 	<title>Charta</title>
   <meta name="author" content="katheroine">
-  <%= stylesheet_link_tag "application", :media => "all" %>
-  <%= stylesheet_link_tag "backend/application", :media => "all" %>
-  <%= stylesheet_link_tag "backend/scaffolds", :media => "all" %>
+  <%= stylesheet_link_tag "backend/backend" %>
   <%= javascript_include_tag "application" %>
-  <%= javascript_include_tag "backend/application" %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body id="backend">
 
   <div id="banner">
     <div class="container">
