--- a/app/assets/stylesheets/backend/backend.css.scss
+++ b/app/assets/stylesheets/backend/backend.css.scss
@@ -10,14 +10,20 @@
  *
  *= require_self
  *= require_tree .
+ * 
  */
 
 *
 {
 	margin: 0px;
 	padding: 0px;
-	font-family: 'Sansation', 'Helvetica', sans-serif;
 	outline: none;
+	font-family: 'Sansation', 'Helvetica', sans-serif;
+}
+
+.clear
+{
+	clear: both;
 }
 
 a
@@ -35,7 +41,7 @@ body
 {
 	position: relative;
 	background-color: #0e0e0e;
-	background-image: url('noise.png');
+	background-image: url('../noise.png');
 	color: #2c535b;
 }
 
@@ -51,7 +57,7 @@ body
 {
 	min-width: 980px;
 	background-color: #111111;
-	background-image: url('noise.png');
+	background-image: url('../noise.png');
 }
 
 #banner .container
@@ -76,7 +82,7 @@ body
 	left: 10px;
 	width: 403px;
 	height: 113px;
-	background-image: url('charta_logo.png');
+	background-image: url('../charta_logo.png');
 }
 
 #banner div#cart
@@ -95,7 +101,7 @@ body
 	height: 40px;
 	border-bottom: solid 4px #bbbbbb;
 	background-color: #cccccc;
-	background-image: url('noise.png');
+	background-image: url('../noise.png');
 	text-align: right;
 }
 
@@ -106,7 +112,7 @@ body
 	margin: 0;
 	padding: 6px 10px;
 	border-bottom: solid 4px #bbbbbb;
-	background-image: url('noise.png');
+	background-image: url('../noise.png');
 	text-decoration: none;
 	font-size: 25px;
 	color: #1f1f1f;
@@ -116,7 +122,6 @@ body
 {
 	border-bottom: solid 4px #1f1f1f;
 	background-color: #bbbbbb;
-	//color: #cccccc;
 }
 
 #main
@@ -124,17 +129,16 @@ body
 	min-width: 980px;
 	padding: 10px 0;
 	background-color: #eeeeee;
-	background-image: url('noise.png');
+	background-image: url('../noise.png');
 }
 
 #dashboard
 {
-	//margin-top: 30px;
 	padding-top: 20px;
 	padding-bottom: 20px;
 	text-align: right;
 	background-color: #0e0e0e;
-	background-image: url('noise.png');
+	background-image: url('../noise.png');
 	color: #aaaaaa;
 }
 
@@ -146,9 +150,4 @@ body
 #dashboard a:hover
 {
 	text-decoration: underline;
-}
-
-.clear
-{
-	clear: both;
 }
