--- a/app/assets/stylesheets/backend/scaffolds.css.scss
+++ b/app/assets/stylesheets/backend/scaffolds.css.scss
@@ -4,23 +4,14 @@ div#header
 {
 	position: relative;
 	margin: 20px;
-	//text-align: right;
-	//background-color: yellow;
 }
 
 div#header h1
 {
 	display: inline-block;
-	//height: 28px;
-	//padding: 10px 60px 10px 18px;
-	//border-radius: 50px;
-	//background-color: #1f1f1f;
-	//background-image: url('circle_scaffold.png');
-	//background-position: right;
 	background-repeat: no-repeat;
 	font-size: 30px;
 	color: #666666;
-	//background-color: grey;
 }
 
 /* --- messages --- */
@@ -143,19 +134,10 @@ div.controls .action.show
 table.elements_list
 {
 	width: 900px;
-	//margin: 20px 0;
 	table-layout: auto;
 	border-collapse: separate;
 	border-spacing: 0 10px;
 	font-size: 14px;
-	//background-color: pink;
-}
-
-table.elements_list.element
-{
-	//margin: 10px 0;
-	//width: 700px;
-	//background-color: red;
 }
 
 table.elements_list th:first-child,
@@ -250,14 +232,6 @@ table.elements_list td.controls a:hover
 
 /* --- presentation --- */
 
-.presentation
-{
-	//width: 700px;
-	//margin: 15px 0;
-	padding: 0;
-	//background-color: black;
-}
-
 .presentation div.left,
 .presentation div.right
 {
@@ -267,13 +241,11 @@ table.elements_list td.controls a:hover
 .presentation div.left
 {
 	float: left;
-	//background-color: red;
 }
 
 .presentation div.right
 {
 	float: right;
-	//background-color: blue;
 }
 
 .presentation div.center
@@ -286,7 +258,6 @@ table.elements_list td.controls a:hover
 {
 	width: 700px;
 	margin: 10px 0;
-	//padding: 5px;
 	border-radius: 10px;
 	background-color: #666666;
 }
@@ -319,7 +290,6 @@ textarea
 .presentation div.element_field input[type="password"].confirmation
 {
 	margin-top: 0px;
-	//background-color: red;
 }
 
 .presentation div.element_field .name,
@@ -348,7 +318,6 @@ textarea
 .presentation div.element_field .content
 {
 	width: 414px;
-	//margin: 0;
 	padding: 3px 5px;
 	border: solid 3px;
 	border-radius: 5px;
@@ -395,7 +364,6 @@ form.presentation div.element_field .content
 {
 	width: 700px;
 	margin-top: 0;
-	//padding-bottom: 10px;
 }
 
 .presentation div.center div.controls
@@ -408,7 +376,6 @@ form.presentation div.element_field .content
 div#actions
 {
 	margin: 20px 0;
-	//padding: 0 20px;
 	text-align: right;
 }
 
@@ -420,7 +387,7 @@ div#actions > a
 	text-decoration: none;
 	font-size: 18px;
 	background-color: #bb221c;
-	background-image: url('circle_scaffold.png');
+	background-image: url('../circle_scaffold.png');
 	background-position: right;
 	background-repeat: no-repeat;
 	color: #ffffff;
