--- a/app/views/layouts/frontend.html.erb
+++ b/app/views/layouts/frontend.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Charta</title>
+  <meta name="author" content="katheroine">
   <%= stylesheet_link_tag "frontend/frontend", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
@@ -21,7 +22,7 @@
   
   <div id="menu">
     <div class="container">
-      <a href="">company</a><a href="">staff</a><a href="">projets</a><a href="">administrators</a>
+      <a href="">company</a><a href="">staff</a><a href="">projets</a>
     </div>
   </div>
 
