--- a/app/views/layouts/backend.html.erb
+++ b/app/views/layouts/backend.html.erb
@@ -7,7 +7,7 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-<body id="backend">
+<body>
 
   <div id="banner">
     <div class="container">
